fixed alignment

--- a/src/nav.css
+++ b/src/nav.css
@@ -64,5 +64,6 @@
 
     .nav-button {
         visibility: hidden;
+        width: 0;
     }
 }
