--- a/src/pages/aviation.css
+++ b/src/pages/aviation.css
@@ -1,6 +1,8 @@
 .aviation {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
     margin: 5rem;
 }
 
@@ -25,4 +27,12 @@
 
 .aircraft li {
     padding-top: 0.5rem;
+}
+
+@media only screen and (min-width: 768px) {
+    .aviation {
+        flex-direction: row;
+        width: auto;
+        justify-content: center;
+    }
 }
